<resources>
    <string name="app_name">ChatRealtimeDatabase</string>
    <string name="content_description">Imagae view</string>
    <string name="welcome_message">Bienvenido a AristiChat</string>
    <string name="welcome_message_subtitle">El mejor chat del mundo mundial</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="chat">Chat</string>
    <string name="message_hint">Mensaje</string>
    <string name="main">Main</string>
</resources>